# palm_csd

./: .gitattributes  .gitignore  README.md  install  meson.build  palm_csd.py  pyproject.toml  requirements-dev.txt  requirements.txt  static_driver_stats.py
docs/: buildings.md  developer.md  domains_input.md  example.md  index.md  lcz_dcep.md  pavement.md  terrain_height.md  types.md  vegetation.md  water_surfaces.md  yaml.md
palm_csd/: __init__.py  cli.py  constants.py  create_driver.py  csd_config.py  csd_domain.py  geo_converter.py  lcz.py  logger.py  meson.build  netcdf_data.py  statistics.py  tools.py  vegetation.py
palm_csd/data/: __init__.py  csd_default.yml  lcz_definitions.csv  lcz_mappings.csv  meson.build  tree_defaults.csv  value_defaults.csv
tests/: __init__.py  conftest.py  test_01_netcdf_data.py  test_02_trees.py  test_03_vegetation_patches.py  test_04_lcz.py  test_05_geo_converter.py  test_06_checks_config.py  test_95_single_trees.py  test_96_domains.py  test_97_vegetation_patch_application.py  test_98_lcz_application.py  test_99_full_application.py  tools.py
tests/01_netcdf_data/output/: variable.nc
tests/02_trees/output/: trees.pkl.xz
tests/05_geo_converter/input/: Berlin_building_height_15m_DLR.tif  Berlin_building_height_3m_DLR.tif  Berlin_building_height_3m_DLR_WGS84.tif  Berlin_building_type_15m_DLR.tif  Berlin_building_type_3m_DLR.tif  Berlin_building_type_3m_DLR_WGS84.tif  Berlin_terrain_height_15m_DLR.tif  Berlin_terrain_height_3m_DLR.tif  Berlin_terrain_height_3m_DLR_WGS84.tif  Berlin_tree_height_15m_DLR.tif  Berlin_tree_height_3m_DLR.tif  Berlin_tree_height_3m_DLR_WGS84.tif  trees.dbf  trees.shp  trees.shx  trees_multi.shp  trees_multi.shx  trees_multiz.dbf  trees_multiz.shp  trees_multiz.shx  trees_wgs84.shp  trees_wgs84.shx  trees_z.shp  trees_z.shx
tests/05_geo_converter/output/: static_driver_building_height-cut_aligned-0.tif  static_driver_building_height-reprojected_aligned-165.tif  static_driver_building_height-reprojected_downscaling-0.tif  static_driver_building_height-reprojected_downscaling-165.tif  static_driver_building_height-reprojected_shifted-0.tif  static_driver_building_height-reprojected_shifted-165.tif  static_driver_building_height-reprojected_upscaling-0.tif  static_driver_building_height-reprojected_upscaling-165.tif  static_driver_building_height-reprojected_wgs84-0.tif  static_driver_building_height-reprojected_wgs84-165.tif  static_driver_building_type-cut_aligned-0.tif  static_driver_building_type-reprojected_aligned-165.tif  static_driver_building_type-reprojected_downscaling-0.tif  static_driver_building_type-reprojected_downscaling-165.tif  static_driver_building_type-reprojected_shifted-0.tif  static_driver_building_type-reprojected_shifted-165.tif  static_driver_building_type-reprojected_upscaling-0.tif  static_driver_building_type-reprojected_upscaling-165.tif  static_driver_building_type-reprojected_wgs84-0.tif  static_driver_building_type-reprojected_wgs84-165.tif  static_driver_terrain_height-cut_aligned-0.tif  static_driver_terrain_height-reprojected_aligned-165.tif  static_driver_terrain_height-reprojected_downscaling-0.tif  static_driver_terrain_height-reprojected_downscaling-165.tif  static_driver_terrain_height-reprojected_shifted-0.tif  static_driver_terrain_height-reprojected_shifted-165.tif  static_driver_terrain_height-reprojected_upscaling-0.tif  static_driver_terrain_height-reprojected_upscaling-165.tif  static_driver_terrain_height-reprojected_wgs84-0.tif  static_driver_terrain_height-reprojected_wgs84-165.tif  static_driver_tree_height-cut_aligned-0.tif  static_driver_tree_height-reprojected_aligned-165.tif  static_driver_tree_height-reprojected_downscaling-0.tif  static_driver_tree_height-reprojected_downscaling-165.tif  static_driver_tree_height-reprojected_shifted-0.tif  static_driver_tree_height-reprojected_shifted-165.tif  static_driver_tree_height-reprojected_upscaling-0.tif  static_driver_tree_height-reprojected_upscaling-165.tif  static_driver_tree_height-reprojected_wgs84-0.tif  static_driver_tree_height-reprojected_wgs84-165.tif
tests/95_single_trees/: single_trees.yml  update_reference.sh
tests/96_domains/: low_clearance.yml  overlap.yml
tests/97_vegetation_patch_application/: input_data.csv  vegetation_patch.yml
tests/98_lcz_application/: full_lcz.yml  update_reference.sh
tests/99_full_application/: berlin_tiergarten.yml  berlin_tiergarten_geo_referenced.yml  update_reference.sh
tests/installation/: generate_test_data.py  test_installation.yml
tests/palm_run/INPUT/: palm_run_p3d  (+1 more)
tools/: lad_patch_configurator.py
(+44 files in other folders)
