[project]
name = "palm_csd"
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = "--basetemp tests/tmp -n auto --cov=palm_csd --cov-report=term --cov-report=xml --cov-report=html:coverage"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pymarkdown]
# line-length rule MD013 currently does not support tables
# https://github.com/jackdewinter/pymarkdown/issues/771
# disable for now
plugins.line-length.enabled = false
plugins.no-duplicate-heading.enabled = false
plugins.no-inline-html.allowed_elements = "code, sup"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"
