[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "palm_csd"
version = "25.10"
requires-python = ">=3.9"
dependencies = [
    "geopandas==1.0.1 ; python_full_version == '3.9.*'",
    "geopandas==1.1.1 ; python_full_version >= '3.10'",
    "matplotlib==3.10.7 ; python_full_version >= '3.10'",
    "matplotlib==3.9.4 ; python_full_version == '3.9.*'",
    "netcdf4==1.7.2 ; python_full_version == '3.9.*'",
    "netcdf4==1.7.3 ; python_full_version >= '3.10'",
    "numpy>=1.26.4 ; python_full_version >= '3.9' and python_full_version < '3.11'",
    "numpy>=2.1 ; python_full_version >= '3.11'",
    "pandas==2.3.3 ; python_full_version >= '3.9'",
    "pydantic==2.12.2 ; python_full_version >= '3.9'",
    "pyproj==3.6.1 ; python_full_version == '3.9.*'",
    "pyproj==3.7.1 ; python_full_version == '3.10.*'",
    "pyproj==3.7.2 ; python_full_version >= '3.11'",
    "pyyaml>=6.0",
    "rasterio==1.4.3 ; python_full_version == '3.9.*'",
    "rasterio==1.4.4 ; python_full_version >= '3.10'",
    "scipy==1.13.1 ; python_full_version == '3.9.*'",
    "scipy==1.16.1 ; python_full_version >= '3.11'",
    "scipy>=1.14.1 ; python_full_version == '3.10.*'",
]

[project.scripts]
palm_csd = "palm_csd.cli:run"

[tool.pytest.ini_options]
addopts = "--basetemp tests/tmp -n auto --cov=palm_csd --cov-report=term --cov-report=xml --cov-report=html:coverage"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pymarkdown]
# line-length rule MD013 currently does not support tables
# https://github.com/jackdewinter/pymarkdown/issues/771
# disable for now
plugins.line-length.enabled = false
plugins.no-duplicate-heading.enabled = false
plugins.no-inline-html.allowed_elements = "code, sup"

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["D", "E", "F", "I"]
ignore = ["F403", "D211", "D212", "D200", "D203", "D401", "D404", "D205", "D400", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "deepdiff==8.6.1",
    "geopandas==1.0.1 ; python_full_version == '3.9.*'",
    "geopandas==1.1.1 ; python_full_version >= '3.10'",
    "matplotlib==3.10.7 ; python_full_version >= '3.10'",
    "matplotlib==3.9.4 ; python_full_version == '3.9.*'",
    "mypy==1.18.2",
    "netcdf4==1.7.2 ; python_full_version == '3.9.*'",
    "netcdf4==1.7.3 ; python_full_version >= '3.10'",
    "numpy>=1.26.4 ; python_full_version >= '3.9' and python_full_version < '3.11'",
    "numpy>=2.1 ; python_full_version >= '3.11'",
    "pandas==2.3.3 ; python_full_version >= '3.9'",
    "pandas-stubs==2.2.2.240807 ; python_full_version == '3.9.*'",
    "pandas-stubs==2.3.2.250926 ; python_full_version >= '3.10'",
    "pydantic==2.12.2 ; python_full_version >= '3.9'",
    "pymarkdownlnt==0.9.32",
    "pyproj==3.6.1 ; python_full_version == '3.9.*'",
    "pyproj==3.7.1 ; python_full_version == '3.10.*'",
    "pyproj==3.7.2 ; python_full_version >= '3.11'",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "pyyaml>=6.0",
    "rasterio==1.4.3 ; python_full_version == '3.9.*'",
    "rasterio==1.4.4 ; python_full_version >= '3.10'",
    "ruff==0.14.0",
    "scipy==1.13.1 ; python_full_version == '3.9.*'",
    "scipy==1.16.1 ; python_full_version >= '3.11'",
    "scipy>=1.14.1 ; python_full_version == '3.10.*'",
    "types-geopandas==1.1.1.20250829",
    "types-pyyaml==6.0.12.20250915",
]
