py3.install_sources(
    [
        '__init__.py',
        'cli.py',
        'constants.py',
        'create_driver.py',
        'csd_config.py',
        'csd_domain.py',
        'geo_converter.py',
        'lcz.py',
        'logger.py',
        'netcdf_data.py',
        'statistics.py',
        'tools.py',
        'vegetation.py',
    ],
    subdir: 'palm_csd'
)

subdir('data')